--- a/2024/_posts/2024-08-30-1st.md
+++ b/2024/_posts/2024-08-30-1st.md
@@ -118,12 +118,12 @@ macro_rules! vec2 {
 
     // vec2![1, 2, 3, 4] 또는 vec2![1, 2, 3, 4,]
     // 분리자가 ","인 "$a:expr"이 한 번 이상 나오고 마지막 "," 는 option
-    ($($a:expr),+ $(,)?) => {{
+    ($($a:expr),+ $(,)?) => {
         let mut my_vec = Vec::new();
         $(
             my_vec.push($a);
         )+
         my_vec
-    }};
+    };
 }
 ```
