--- a/2024/_posts/2024-08-30-1st.md
+++ b/2024/_posts/2024-08-30-1st.md
@@ -125,5 +125,22 @@ macro_rules! vec2 {
         )+
         my_vec
     };
+
+    // vec2![23; 5]
+    ($m:expr; $n:expr) => {
+        let ele = $m;
+        let mut my_vec = Vec::new();
+        for _ in 0..$n {
+            my_vec.push(ele.clone())
+        }
+        my_vec
+    };
+}
+
+fn main() {
+    let nums1: Vec<i32> = vec2![];
+    let nums2 = vec2![1, 2, 3, 4];
+    let nums3 = vec2![23; 5];
+    println!("{nums1:?} {nums2:?} {nums3:?}");
 }
 ```
