--- a/2024/_posts/2024-08-30-1st.md
+++ b/2024/_posts/2024-08-30-1st.md
@@ -144,3 +144,107 @@ fn main() {
     println!("{nums1:?} {nums2:?} {nums3:?}");
 }
 ```
+
+* 결과
+
+```text
+[] [1, 2, 3, 4] [23, 23, 23, 23, 23]
+```
+
+## recursive
+
+```rust
+macro_rules! add {
+    ($a:expr) => {
+        $a
+    };
+
+    ($a:expr, $b:expr) => {
+        $a + $b
+    };
+
+    // "tt"는 token tree
+    // "$($b:tt)*"은 나머지 argument를 의미
+    ($a:expr, $($b:tt)*) => {
+        $a + add!($($b)*)
+    };
+}
+```
+
+## 두 개 그룹
+
+```rust
+macro_rules! pos {
+    ($($a:expr),*; $($b:expr),*) => {
+        let (mut sum1, mut sum2) = (0, 0);
+        $(
+            sum1 += $a;
+        )*
+        $(
+            sum2 += $b;
+        )*
+        sum1 * sum2
+    };
+}
+
+fn main() {
+    let res = pos!(1,2,3; 4,5,6);
+    println!("{res}");
+}
+```
+
+## 테이블 헤더 포맷팅
+
+```rust
+macro_rules! print_table_header {
+    ($txt:expr) => {
+        println!("");
+        println!("{0}", $txt);
+        println!("{0}", std::iter::repeat("-").take($txt.len()).collect::<String>());
+    };
+    
+    ($fmt:expr, $($arg:tt)*) => ({
+        let table_row = format!($fmt, $($arg)*).to_string();
+
+        println!("");
+        println!("{0}", table_row);
+        println!("{0}", std::iter::repeat("-").take(table_row.len()).collect::<String>());
+    });
+}
+
+fn main() {
+    print_table_header!("{0:<6} | {1:<40}", "Delta", "Ex[kc]");
+    print_table_header!("bccho");
+}
+```
+
+```text
+Delta  | Ex[kc]                                  
+-------------------------------------------------
+
+bccho
+-----
+```
+
+## 다른 모듈에 매크로 정의
+
+* ma.rs
+
+```rust
+#[macro_export]
+macro_rules! print_message {
+    ($msg:expr) => {
+        println!("{}", $msg)
+    };
+}
+```
+
+* main.rs
+
+```rust
+mod ma;
+
+fn main() {
+    print_message!("bccho");
+}
+```
