--- a/2024/_posts/2024-08-30-1st.md
+++ b/2024/_posts/2024-08-30-1st.md
@@ -1,5 +1,5 @@
 ---
-title: 매크로 -1
+title: 매크로
 # categories:
 #   - Blog
 tags: [rust]
@@ -131,7 +131,7 @@ macro_rules! vec2 {
         let ele = $m;
         let mut my_vec = Vec::new();
         for _ in 0..$n {
-            my_vec.push(ele.clone())
+            my_vec.push(ele.clone());
         }
         my_vec
     };
@@ -204,11 +204,11 @@ macro_rules! print_table_header {
     };
     
     ($fmt:expr, $($arg:tt)*) => ({
-        let table_row = format!($fmt, $($arg)*).to_string();
+        let row = format!($fmt, $($arg)*).to_string();
 
         println!("");
-        println!("{0}", table_row);
-        println!("{0}", std::iter::repeat("-").take(table_row.len()).collect::<String>());
+        println!("{0}", row);
+        println!("{0}", std::iter::repeat("-").take(row.len()).collect::<String>());
     });
 }
 
