--- a/2024/_posts/2024-08-15-1st.md
+++ b/2024/_posts/2024-08-15-1st.md
@@ -9,6 +9,14 @@ tags: [rust]
 # toc_label: "페이지 목차"
 ---
 
+## Summary
+* Closures are a combination of a function pointer (fn) and a context.
+* A closure with no context is just a function pointer.
+* A closure which has an immutable context belongs to Fn.
+* A closure which has a mutable context belongs to FnMut.
+* A closure that owns its context belongs to FnOnce.
+
+
 ## 컴파일러가 자동으로 closure Trait bound를 추론
 
 ```rust
@@ -18,11 +26,12 @@ fn main() {
     // 1) reference로 변수를 capture. 수정 못함
     // 2) 변수 capture을 안 할 수도 있음
     // 3) 동시에 여러 번 수행 가능
+    // 4) & access to their environment
 
     let color = String::from("green");
 
     // imple Fn() : color를 &String으로 캡쳐
-    let print = || println!("`color`: {}", color);
+    let print = || println!("color: {}", color);
 
     print();
 
@@ -31,20 +40,21 @@ fn main() {
 
     print();
 
-    // borrow가 끝난 후 mvoe 가능하다
+    // borrow가 끝난 후 move 가능하다
     let _color_moved = color;
 
     //------------------------------
     // FnMut
     // 1) mutable reference로 변수를 capture. 수정 가능
     // 2) 여러 번 수행 가능
+    // 3) &mut accecss to there environment
 
     let mut count = 0;
 
     // impl FnMut()
     let mut inc = || {
         count += 1;
-        println!("`count`: {}", count);
+        println!("count: {}", count);
     };
 
     inc();
@@ -61,13 +71,15 @@ fn main() {
     // FnOnce
     // 1) 한 번만 수행 가능
     // 2) 변수의 소유권을 가져온다.
+    // 3) after the closure runs once, the environment is gone
+    //    --> consumes the environment
 
     // non-copy 타입
     let movable = Box::new(3);
 
     // impl FnOnce()
     let consume = || {
-        println!("`movable`: {:?}", movable);
+        println!("movable: {:?}", movable);
         // movable을 소유하여야 drop이 가능하다
         drop(movable);
     };
@@ -108,6 +120,11 @@ fn main() {
     let value = String::from("closure called");
 
     // sort_by_key()는 input으로 FnMut closure를 받는다
+    //
+    // pub fn sort_by_key<K, F>(&mut self, mut f: F)
+    // where
+    //     F: FnMut(&T) -> K,
+    //     K: Ord,
     list.sort_by_key(|r| {
         // 여기서 컴파일 에러 발생
         // value 변수가 sort_operations 벡터로 소유권이 이동한다
