--- a/2024/_posts/2024-08-15-1st.md
+++ b/2024/_posts/2024-08-15-1st.md
@@ -176,14 +176,25 @@ where
     f(add)
 }
 
-fn main() {
+// 아래 두 개 함수도 위 함수와 완전 동일
 
+// fn apply_with_log<F: FnOnce(i32) -> i32>(f: F, add: i32) -> i32
+// {
+//     f(add)
+// }
+
+// fn apply_with_log(f: impl FnOnce(i32) -> i32, add: i32) -> i32
+// {
+//     f(add)
+// }
+
+fn main() {
     // Fn closure. 변수를 capture하지 않음
     let add_3 = |x| x + 3;
 
     // Fn closure가 FnOnce closure의 input으로 가능
-    println!("add_3: {}", apply_with_log(add_3, 10));
-    println!("add_3: {}", apply_with_log(add_3, 20));
+    assert_eq!(13, apply_with_log(add_3, 10));
+    assert_eq!(23, apply_with_log(add_3, 20));
 
     let mut v = Vec::new();
 
@@ -195,14 +206,14 @@ fn main() {
     };
 
     // FnMut closure가 FnOnce closure의 input으로 가능
-    println!("accumulate: {}", apply_with_log(&mut accumulate, 4));
-    println!("accumulate: {}", apply_with_log(&mut accumulate, 5));
+    assert_eq!(4, apply_with_log(&mut accumulate, 4));
+    assert_eq!(9, apply_with_log(&mut accumulate, 5));
 
     // FnOnce closure
     let multiply_sum = |x| x * v.into_iter().sum::<i32>();
 
     // FnOnce closure는 multiply_sum를 consume 하므로 한 번만 수행 가능
-    println!("multiply_sum: {}", apply_with_log(multiply_sum, 3));
+    assert_eq!(27, apply_with_log(multiply_sum, 3));
 }
 ```
 
@@ -219,9 +230,32 @@ fn main() {
     // 그러나 main이 thread보다 빨리 종료되면 list가 drop 된다
     // 그래서 move 키워드를 사용하여 list를 closure내로 강제 move 시킨다
     // move 키워드는 closure가 캡쳐한 모든 변수의 소유권을 closure로 이동시킨다
-    thread::spawn(move || println!("From thread: {list:?}"))
+
+    // c: impl Fn()
+    let c = move || println!("From thread: {list:?}");
+
+    thread::spawn(c)
         .join()
         .unwrap();
 }
+```
 
+## Returning Closures
+```rust
+
+fn main() {
+    let a = returns_closure_impl();
+    assert_eq!(11, a(10));
+
+    let b = returns_closure_box();
+    assert_eq!(21, b(20));
+}
+
+fn returns_closure_impl() -> impl Fn(i32) -> i32 {
+    |x| x + 1
+}
+
+fn returns_closure_box() -> Box<dyn Fn(i32) -> i32> {
+    Box::new(|x| x + 1)
+}
 ```
