--- a/2024/_posts/2024-08-15-1st.md
+++ b/2024/_posts/2024-08-15-1st.md
@@ -249,13 +249,38 @@ fn main() {
 
     let b = returns_closure_box();
     assert_eq!(21, b(20));
+
+    let c = make_adder(10);
+    assert_eq!(15, c(5));
+
+    let d = make_adder(-10);
+    assert_eq!(-15, d(5));
 }
 
-fn returns_closure_impl() -> impl Fn(i32) -> i32 {
+fn returns_closure_impl() -> impl FnOnce(i32) -> i32 {
     |x| x + 1
 }
 
 fn returns_closure_box() -> Box<dyn Fn(i32) -> i32> {
     Box::new(|x| x + 1)
+}
+
+// 두 가지 이상의 type을 리턴하는 경우는 impl Fn 사용 못함
+// 컴파일 에러
+#[cfg(not_compile)]
+fn make_adder(a: i32) -> impl Fn(i32) -> i32 {
+    if a > 0 {
+        move |b| a + b
+    } else {
+        move |b| a - b
+    }
+}
+
+fn make_adder(a: i32) -> Box<dyn Fn(i32) -> i32> {
+    if a > 0 {
+        Box::new(move |b| a + b)
+    } else {
+        Box::new(move |b| a - b)
+    }
 }
 ```
