--- a/2024/_posts/2024-08-15-1st.md
+++ b/2024/_posts/2024-08-15-1st.md
@@ -26,7 +26,7 @@ fn main() {
     // 1) reference로 변수를 capture. 수정 못함
     // 2) 변수 capture을 안 할 수도 있음
     // 3) 동시에 여러 번 수행 가능
-    // 4) & access to their environment
+    // 4) &T access to their environment
 
     let color = String::from("green");
 
@@ -47,7 +47,7 @@ fn main() {
     // FnMut
     // 1) mutable reference로 변수를 capture. 수정 가능
     // 2) 여러 번 수행 가능
-    // 3) &mut accecss to there environment
+    // 3) &mut T accecss to there environment
 
     let mut count = 0;
 
@@ -73,6 +73,7 @@ fn main() {
     // 2) 변수의 소유권을 가져온다.
     // 3) after the closure runs once, the environment is gone
     //    --> consumes the environment
+    // 4) T access to their environment
 
     // non-copy 타입
     let movable = Box::new(3);
@@ -154,6 +155,8 @@ fn main() {
 ```
 
 ## 함수 input으로 받을 때 closure의 trait bound
+* closure type을 명시해야 한다
+
 ```rust
 // ┌──────────────┐
 // │    FnOnce    │
