--- a/2024/_posts/2024-09-01-1st.md
+++ b/2024/_posts/2024-09-01-1st.md
@@ -72,7 +72,65 @@ fn main() {
 }
 ```
 
-## String
+## String의 스택 메모리
+
+* The pointer to the heap region you reserved.
+* The length of the string, i.e. how many bytes are in the string.
+* The capacity of the string, i.e. how many bytes have been reserved on the heap.
+
+```rust
+
+let mut s = String::with_capacity(5);
+
+//       +---------+--------+----------+
+// Stack | pointer | length | capacity | 
+//       |  |      |   0    |    5     |
+//       +--|------+--------+----------+
+//          |
+//          |
+//          v
+//        +---+---+---+---+---+
+// Heap:  | ? | ? | ? | ? | ? |
+//        +---+---+---+---+---+
+
+
+s.push_str("Hey");
+
+//       +---------+--------+----------+
+// Stack | pointer | length | capacity |
+//       |  |      |   3    |    5     |
+//       +--|------+--------+----------+
+//          |
+//          |
+//          v
+//        +---+---+---+---+---+
+// Heap:  | H | e | y | ? | ? |
+//        +---+---+---+---+---+
+```
+
+## String reference
+
+```rust
+
+let s = String::from("Hey");
+let r = &s;
+
+//            --------------------------------------
+//            |                                    |
+//       +----v----+--------+----------+      +----|----+
+// Stack | pointer | length | capacity |      | pointer |
+//       |  |      |   3    |    5     |      |         |
+//       +--|------+--------+----------+      +---------+
+//          |          s                           r
+//          |
+//          v
+//        +---+---+---+---+---+
+// Heap   | H | e | y | ? | ? |
+//        +---+---+---+---+---+
+
+```
+
+## String slice
 
 ```rust
 use std::mem::size_of_val;
