--- a/2024/_posts/2024-09-01-1st.md
+++ b/2024/_posts/2024-09-01-1st.md
@@ -121,7 +121,7 @@ let r = &s;
 // Stack | pointer | length | capacity |      | pointer |
 //       |  |      |   3    |    5     |      |         |
 //       +--|------+--------+----------+      +---------+
-//          |          s                           r
+//          |          s (String)                  r (&String)
 //          |
 //          v
 //        +---+---+---+---+---+
