--- a/2024/_posts/2024-08-18-1st.md
+++ b/2024/_posts/2024-08-18-1st.md
@@ -9,6 +9,17 @@ tags: [rust]
 # toc_label: "페이지 목차"
 ---
 
+## Trait std::ops::Deref
+
+```rust
+pub trait Deref {
+    type Target: ?Sized;
+
+    // Required method
+    fn deref(&self) -> &Self::Target;
+}
+```
+
 ## Deref Trait implementation
 
 ```rust
@@ -23,7 +34,7 @@ impl<T> MyBox<T> {
     }
 }
 
-// Deref Trait을 implement 한다
+// MyBox<T>에 대한 Deref Trait을 implement 한다
 impl<T> Deref for MyBox<T> {
     type Target = T;
 
@@ -56,6 +67,19 @@ fn main() {
     assert_eq!(5, *deref);
 }
 
+```
+
+## String implements Deref
+* 필요한 경우 &String이 &str로 자동 convert 된다
+
+```rust
+impl Deref for String {
+    type Target = str;
+    
+    fn deref(&self) -> &str {
+        // [...]
+    }
+}
 ```
 
 ## Implicit Deref Coercions with Functions and Methods
@@ -104,6 +128,10 @@ fn main() {
     let c = m.deref().deref();
 
     // deref coercion이 없다면 아래와 같이 해야한다
+    //
+    // *m: String
+    // (*m)[..]: str
+    // &(*m)[..]: &str
     hello(&(*m)[..]);
 }
 ```
