--- a/2024/_posts/2024-09-16-2nd.md
+++ b/2024/_posts/2024-09-16-2nd.md
@@ -29,7 +29,9 @@ struct Point {
 // }
 
 // 아래는 default generic type을 사용한 trait implementation
+// Rhs는 Self가 된다
 impl Add for Point {
+    // associated type named Output
     type Output = Point;
 
     fn add(self, rhs: Self) -> Self::Output {
