--- a/2025/_posts/2025-02-20-1st .md
+++ b/2025/_posts/2025-02-20-1st .md
@@ -41,3 +41,83 @@ fn main() {
 }
 ```
 
+## Aggregate Types
+```rust
+// tuple struct
+struct TextMatch(usize, String);
+
+fn main() {
+    // Construct by providing the contents in order.
+    let m = TextMatch(12, "needle".to_owned());
+
+    // Access by field number.
+    assert_eq!(m.0, 12);
+    assert_eq!(m.1, "needle".to_owned());
+}
+```
+
+## enums
+```rust
+enum HttpResultCode {
+    Ok = 200,
+    NotFound = 404,
+    Teapot = 418,
+}
+
+pub enum Sides {
+    Both,
+    Single,
+}
+
+pub enum Output {
+    BlackWhite,
+    Color,
+}
+
+pub fn print_page(sides: Sides, color: Output) {
+    match (sides, color) {
+        (Sides::Both, Output::BlackWhite) => println!("both sides in black-white"),
+        (Sides::Both, Output::Color) => println!("both sides in color"),
+        (Sides::Single, Output::BlackWhite) => println!("one side in black-white"),
+        (Sides::Single, Output::Color) => println!("one side in color"),
+    }
+}
+
+fn main() {
+    let code = HttpResultCode::NotFound;
+    assert_eq!(code as i32, 404);
+
+    print_page(Sides::Both, Output::BlackWhite);
+}
+```
+
+## enums with Fields
+```rust
+pub struct RgbColor(u8, u8, u8);
+
+pub enum Color {
+    Monochrome,
+    Foreground(RgbColor),
+}
+
+pub struct DisplayProps {
+    pub x: u32,
+    pub y: u32,
+    pub color: Color,
+}
+
+fn main() {
+    let props = DisplayProps {
+        x: 10,
+        y: 20,
+        color: Color::Foreground(RgbColor(255, 0, 0)),
+    };
+
+    match props.color {
+        Color::Monochrome => println!("Monochrome"),
+        Color::Foreground(RgbColor(r, g, b)) => {
+            println!("Foreground color: R: {}, G: {}, B: {}", r, g, b);
+        }
+    }
+}
+```
